--- a/Neural Networks/2Layer NN.ipynb
+++ b/Neural Networks/2Layer NN.ipynb
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "id": "fc8309b1",
    "metadata": {},
    "outputs": [],
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 3,
    "id": "912c93e6",
    "metadata": {},
    "outputs": [],
@@ -74,6 +74,24 @@
     "n_h = 2; n_y = 1\n",
     "alpha = 0.05\n",
     "iterations = 50000"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "2546bd30",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(2, 4) (1, 4)\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(X.shape, y.shape)"
    ]
   },
   {
